<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#192834"
   >

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backikon"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/btn_register"
            android:textSize="25sp"
            android:textColor="@color/colorwhite"/>


    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_add_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/profilresmiekle"
                android:clickable="true"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/img_plus_ikon"
                android:layout_centerInParent="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/morartikon"
                android:visibility="visible"/>

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="20dp"
        android:background="@drawable/beyaz_zemin"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:background="@null"
            android:backgroundTint="@color/item_text_color"
            android:gravity="left|center"
            android:hint="@string/register_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/item_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/settings_view_color"></View>


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:background="@null"
            android:backgroundTint="@color/item_text_color"
            android:gravity="left|center"
            android:hint="E-mail"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/item_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/settings_view_color"></View>

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:background="@null"
            android:backgroundTint="@color/item_text_color"
            android:gravity="left|center"
            android:hint="@string/loginuserhint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/item_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/settings_view_color"></View>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:background="@null"
            android:backgroundTint="@color/item_text_color"
            android:gravity="left|center"
            android:hint="@string/loginpasshint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/item_text_color"
            android:textSize="15sp"
            android:textStyle="bold"
            android:focusable="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/settings_view_color"></View>

        <EditText
            android:id="@+id/et_birthday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:background="@null"
            android:backgroundTint="@color/item_text_color"
            android:gravity="left|center"
            android:hint="@string/age"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/item_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/settings_view_color"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/item_text_color"
                android:gravity="left|center"
                android:hint="@string/gender"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/item_text_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_erkek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:checked="false"
                android:text="@string/male"
                android:textColor="@color/item_text_color"
                />

            <CheckBox
                android:id="@+id/checkbox_kadin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:checked="false"
                android:text="@string/female"
                android:textAlignment="textEnd"
                android:textColor="@color/item_text_color" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_orange_background"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/generate"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>