<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#192834"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backikon"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/record_video"
            android:textSize="25sp"
            android:textColor="@color/colorwhite"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/cekbuton" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks_info"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/custom_white_background"
        android:text="TAMAM"
        android:textColor="@android:color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

</LinearLayout>