<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#192834">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backikon"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgot_password"
            android:textSize="25sp"
            android:textColor="@color/colorwhite"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/beyaz_zemin"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgot_password_message"
            android:textColor="@color/login_edittext"
            android:textSize="15sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_bg"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/mailikon" />

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@android:color/transparent"
                android:drawablePadding="10dp"
                android:gravity="left"
                android:hint="e-mail"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/login_edittext"
                android:textColorHint="@color/login_edittext" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_meydan_okuma"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btn_send"
            android:textColor="@android:color/white" />

    </LinearLayout>


</RelativeLayout>